Aggiustamenti userMapper e userController, automatizzazione dei dto lato frontend
